# k9club

./: .copier-answers.yml  .gitignore  components.json  eslint.config.ts  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.js
.github/: dependabot.yml
.github/workflows/: django.yml
frontend/css/: tailwind.css
frontend/js/: main.tsx
frontend/js/components/: Layout.jsx  Layout.tsx  adherent-creation-form.tsx  adherent-details.tsx  adherent-dog-creation-form.tsx  adherent-header.tsx  adherents-table.tsx  app-shell.tsx  app-sidebar-header.tsx  app-sidebar.tsx  breadcrumbs.tsx  club-card.tsx  club-creation-form.tsx  club-settings-sidebar.tsx  dog-creation-form.tsx  dog-delete-modal.tsx  dog-edit-form.tsx  dogs-table.tsx  invitations-table.tsx  invite-creation-form.tsx  nav-main.tsx  theme-provider.tsx
frontend/js/components/ui/: alert-dialog.tsx  button.tsx  custom-tabs.tsx  sidebar.tsx  vertical-tabs.tsx
frontend/js/layouts/: app-layout.tsx  club-layout.tsx
frontend/js/lib/: utils.ts
frontend/js/pages/: Index.jsx  Index.tsx
frontend/js/pages/Clubs/: Detail.tsx  Edit.tsx  Index.tsx  Invitations.tsx
frontend/js/types/: index.ts
k9club/: asgi.py  middleware.py  settings.py  settings_production.py  urls.py  views.py  wsgi.py
k9club/apps/core/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
k9club/apps/core/migrations/: 0001_initial.py  (+3 more)
k9club/utils/: inertia_helpers.py  permissions.py  slugs.py  tokens.py
templates/: base.html
(+4 files in other folders)
