[project]
name = "k9club"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-environ>=0.11.2",
    "django>=5.1.4",
    "django-vite>=3.0.5",
    "inertia-django>=0.6.0",
    
    
    "whitenoise>=6.8.2",
    "gunicorn>=23.0.0",
]
