[project]
name = "k9club"
version = "0.1.0"
description = "Canine club management application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-environ>=0.11.2",
    "django>=6.0.0",
    "django-vite>=3.0.5",
    "inertia-django>=0.6.0",
    "whitenoise>=6.8.2",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "django-stubs[compatible-mypy]>=5.2.8",
    "isort>=7.0.0",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "k9club.settings"
